# ferrum-agent

./: .rustfmt.toml  Cargo.toml  Modelfile  README.md  SOUL.md
crates/ollama_api/: Cargo.toml
crates/ollama_api/src/: dtos.rs  lib.rs
ferrum-agent/: Cargo.toml
ferrum-agent/src/: main.rs  ui.rs
ferrum-agent/src/ollama/: agent.rs
ferrum-agent/src/tools/: ls.rs  mod.rs  read_file.rs  write_file.rs
logs/: ferrum.log.2026-02-16  ferrum.log.2026-02-22
src/: main.rs  ui.rs
src/ollama/: connection.rs  dtos.rs  mod.rs
src/tools/: mod.rs
