[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8" # For generating json schemas to tell the llm what I want back

# For the TUI
ratatui = "0.29.0"
tui-textarea = "0.7.0"

# Error Handling
thiserror = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
