[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama_api = {path = "../crates/ollama_api"}

tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
futures-util = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"

# For the TUI
ratatui = "0.30.0"
tui-markdown = "0.3.7"

# Error Handling
thiserror = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
tui-input = { version = "0.15.0", features = ["crossterm", "ratatui"] }
crossterm = "0.29.0"
