[package]
name = "ollama_api"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = {version = "0.13.2", features = ["json", "stream"]}
schemars = "1.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
